search bar smaller, made tables on create team page smaller/compacter and tried to adjust fields accordingly

--- a/markup/_dist/create_team_football.html
+++ b/markup/_dist/create_team_football.html
@@ -91,14 +91,14 @@
     </header>
     <main>
       <section class="nl-section nl-players nl-create-team">
-        <div class="container container-wider">
+        <div class="container-fluid">
           <div class="row">
             <div class="col-md-12">
               <h1>CREATE TEAM</h1>
             </div>
           </div>
           <div class="row">
-            <div class="col-md-12 col-lg-8 nl-team-m600">
+            <div class="col-md-12 col-lg-7 col-xl-7">
               <div class="nl-players-table nl-create-team-table">
                 <div class="nl-players-table-data-field">
                   <div class="nl-data--avatar hidden-sm-down"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"></div>
@@ -161,7 +161,7 @@
                                   </div>
                                   <div class="col-6">
                                     <p>
-                                      <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                      <button class="btn btn-primary btn-sm">Draft</button>
                                     </p>
                                     <p class="nl-pl-social"><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></p>
                                   </div>
@@ -227,7 +227,7 @@
                                   </div>
                                   <div class="col-6">
                                     <p>
-                                      <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                      <button class="btn btn-primary btn-sm">Draft</button>
                                     </p>
                                     <p class="nl-pl-social"><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></p>
                                   </div>
@@ -293,7 +293,7 @@
                                   </div>
                                   <div class="col-6">
                                     <p>
-                                      <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                      <button class="btn btn-primary btn-sm">Draft</button>
                                     </p>
                                     <p class="nl-pl-social"><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></p>
                                   </div>
@@ -359,7 +359,7 @@
                                   </div>
                                   <div class="col-6">
                                     <p>
-                                      <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                      <button class="btn btn-primary btn-sm">Draft</button>
                                     </p>
                                     <p class="nl-pl-social"><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></p>
                                   </div>
@@ -425,7 +425,7 @@
                                   </div>
                                   <div class="col-6">
                                     <p>
-                                      <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                      <button class="btn btn-primary btn-sm">Draft</button>
                                     </p>
                                     <p class="nl-pl-social"><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></p>
                                   </div>
@@ -491,7 +491,7 @@
                                   </div>
                                   <div class="col-6">
                                     <p>
-                                      <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                      <button class="btn btn-primary btn-sm">Draft</button>
                                     </p>
                                     <p class="nl-pl-social"><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></p>
                                   </div>
@@ -557,7 +557,7 @@
                                   </div>
                                   <div class="col-6">
                                     <p>
-                                      <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                      <button class="btn btn-primary btn-sm">Draft</button>
                                     </p>
                                     <p class="nl-pl-social"><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></p>
                                   </div>
@@ -623,7 +623,7 @@
                                   </div>
                                   <div class="col-6">
                                     <p>
-                                      <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                      <button class="btn btn-primary btn-sm">Draft</button>
                                     </p>
                                     <p class="nl-pl-social"><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></p>
                                   </div>
@@ -694,12 +694,12 @@
                           <tbody>
                             <tr>
                               <td>
-                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                <button class="btn btn-primary btn-sm">Draft</button>
                               </td>
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>G</td>
+                              <td>K</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -708,12 +708,12 @@
                             </tr>
                             <tr>
                               <td>
-                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                <button class="btn btn-primary btn-sm">Draft</button>
                               </td>
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>DL</td>
+                              <td>QB</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -722,12 +722,12 @@
                             </tr>
                             <tr>
                               <td>
-                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                <button class="btn btn-primary btn-sm">Draft</button>
                               </td>
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>DR</td>
+                              <td>RRB</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -736,12 +736,12 @@
                             </tr>
                             <tr>
                               <td>
-                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                <button class="btn btn-primary btn-sm">Draft</button>
                               </td>
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>DAL</td>
+                              <td>LWR</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -750,12 +750,12 @@
                             </tr>
                             <tr>
                               <td>
-                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                <button class="btn btn-primary btn-sm">Draft</button>
                               </td>
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>DAR</td>
+                              <td>FLEX</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -764,12 +764,12 @@
                             </tr>
                             <tr>
                               <td>
-                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                <button class="btn btn-primary btn-sm">Draft</button>
                               </td>
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>CM</td>
+                              <td>TE</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -778,12 +778,12 @@
                             </tr>
                             <tr>
                               <td>
-                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                <button class="btn btn-primary btn-sm">Draft</button>
                               </td>
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>RWM</td>
+                              <td>LRB</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -792,12 +792,12 @@
                             </tr>
                             <tr>
                               <td>
-                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                <button class="btn btn-primary btn-sm">Draft</button>
                               </td>
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>LWM</td>
+                              <td>QB</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -806,12 +806,12 @@
                             </tr>
                             <tr>
                               <td>
-                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                <button class="btn btn-primary btn-sm">Draft</button>
                               </td>
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>RS</td>
+                              <td>LWR</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -820,12 +820,12 @@
                             </tr>
                             <tr>
                               <td>
-                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                <button class="btn btn-primary btn-sm">Draft</button>
                               </td>
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>LS</td>
+                              <td>FLEX</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -834,12 +834,12 @@
                             </tr>
                             <tr>
                               <td>
-                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                <button class="btn btn-primary btn-sm">Draft</button>
                               </td>
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>ST</td>
+                              <td>K</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -860,7 +860,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 nl-team-600">
+            <div class="col-md-12 col-lg-5 col-xl-5">
               <div class="nl-team-info">
                 <div class="nl-team-name">your team</div>
                 <div class="nl-team-data">
@@ -887,9 +887,6 @@
                 <button type="button" class="btn btn-team btn-big-radius list-view-btn">list view</button>
               </div>
               <div class="nl-team-field football">
-                <div class="striker-line"></div>
-                <div class="midfielder-line"></div>
-                <div class="defender-line"></div>
                 <div class="player-main-block football">
                   <div data-position="FLEX" class="nl-player-block nl-FLEX-position"><img src="assets/img/football/FLEX.png" alt="FLEX">
                     <div class="nl-player-block--data">
@@ -905,14 +902,14 @@
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="LRB" class="nl-player-block nl-LRB-position"><img src="assets/img/football/LRB.png" alt="LRB">
+                  <div data-position="RB" class="nl-player-block nl-LRB-position"><img src="assets/img/football/LRB.png" alt="LRB">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="RRB" class="nl-player-block nl-RRB-position"><img src="assets/img/football/RRB.png" alt="RRB">
+                  <div data-position="RB" class="nl-player-block nl-RRB-position"><img src="assets/img/football/RRB.png" alt="RRB">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
@@ -926,14 +923,14 @@
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="LWR" class="nl-player-block nl-LWR-position"><img src="assets/img/football/LWR.png" alt="LWR">
+                  <div data-position="WR" class="nl-player-block nl-LWR-position"><img src="assets/img/football/LWR.png" alt="LWR">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="RWR" class="nl-player-block nl-RWR-position"><img src="assets/img/football/RWR.png" alt="RWR">
+                  <div data-position="WR" class="nl-player-block nl-RWR-position"><img src="assets/img/football/RWR.png" alt="RWR">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
