nav items updated, create team for both sports working, draft button for create teams not disabled class

--- a/markup/_dist/create_team.html
+++ b/markup/_dist/create_team.html
@@ -66,10 +66,10 @@
                     <li class="nav-item"><a href="players.html" class="nav-link">PLAYERS</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">LIVE SCORES</a></li>
                     <li class="nav-item dropdown"><a href="#" id="dropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle">MY ACCOUNT</a>
-                      <div aria-labelledby="dropdownMenuLink2" class="dropdown-menu"><a href="edit_profile.html" class="dropdown-item">Profile</a><a href="change_password.html" class="dropdown-item">Change Password</a><a href="#" class="dropdown-item">Friends </a><a href="my_balances.html" class="dropdown-item">My Balance</a></div>
+                      <div aria-labelledby="dropdownMenuLink2" class="dropdown-menu"><a href="edit_profile.html" class="dropdown-item">Profile</a><a href="change_password.html" class="dropdown-item">edit Password</a><a href="#" class="dropdown-item">Friends </a><a href="my_balances.html" class="dropdown-item">My Balance</a></div>
                     </li>
                     <li class="nav-item dropdown"><a href="#" id="dropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle"><img alt="" src="assets/img/flag/USA.png"></a>
-                      <div aria-labelledby="dropdownMenuLink2" class="dropdown-menu"><a href="#" class="dropdown-item">France</a><a href="#" class="dropdown-item"><img alt="" src="assets/img/flag/Spain.png"></a><a href="#" class="dropdown-item"><img alt="" src="assets/img/flag/Germany.png"></a><a href="#" class="dropdown-item"><img alt="" src="assets/img/flag/USA.png"></a></div>
+                      <div aria-labelledby="dropdownMenuLink2" class="dropdown-menu"><a href="#" class="dropdown-item">French</a><a href="#" class="dropdown-item"><img alt="" src="assets/img/flag/Spain.png"></a><a href="#" class="dropdown-item"><img alt="" src="assets/img/flag/Germany.png"></a><a href="#" class="dropdown-item"><img alt="" src="assets/img/flag/USA.png"></a></div>
                     </li>
                   </ul>
                   <div class="nl-profile-mobile">
@@ -91,14 +91,14 @@
     </header>
     <main>
       <section class="nl-section nl-players nl-create-team soccer">
-        <div class="container container-wider">
+        <div class="container-fluid">
           <div class="row">
             <div class="col-md-12">
               <h1>CREATE TEAM</h1>
             </div>
           </div>
           <div class="row sports-filtering">
-            <div class="col-md-12 col-lg-8">
+            <div class="col-xs-12">
               <div class="nl-players-filter-title">Filter by league:</div>
               <div class="nl-players-filter">
                 <div class="row align-items-center">
@@ -181,7 +181,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-12 col-lg-8 nl-team-m600">
+            <div class="col-md-12 col-lg-7 col-xl-7">
               <div class="nl-players-table nl-create-team-table">
                 <div class="nl-players-table-data-field">
                   <div class="nl-data--avatar hidden-sm-down"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"></div>
@@ -998,7 +998,7 @@
                           <tbody>
                             <tr>
                               <td>
-                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                <button class="btn btn-primary btn-sm">Draft</button>
                               </td>
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
@@ -1012,7 +1012,7 @@
                             </tr>
                             <tr>
                               <td>
-                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                <button class="btn btn-primary btn-sm">Draft</button>
                               </td>
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
@@ -1026,7 +1026,7 @@
                             </tr>
                             <tr>
                               <td>
-                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                <button class="btn btn-primary btn-sm">Draft</button>
                               </td>
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
@@ -1040,7 +1040,7 @@
                             </tr>
                             <tr>
                               <td>
-                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                <button class="btn btn-primary btn-sm">Draft</button>
                               </td>
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
@@ -1054,7 +1054,7 @@
                             </tr>
                             <tr>
                               <td>
-                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                <button class="btn btn-primary btn-sm">Draft</button>
                               </td>
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
@@ -1068,7 +1068,7 @@
                             </tr>
                             <tr>
                               <td>
-                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                <button class="btn btn-primary btn-sm">Draft</button>
                               </td>
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
@@ -1082,7 +1082,7 @@
                             </tr>
                             <tr>
                               <td>
-                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                <button class="btn btn-primary btn-sm">Draft</button>
                               </td>
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
@@ -1096,7 +1096,7 @@
                             </tr>
                             <tr>
                               <td>
-                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                <button class="btn btn-primary btn-sm">Draft</button>
                               </td>
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
@@ -1110,7 +1110,7 @@
                             </tr>
                             <tr>
                               <td>
-                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                <button class="btn btn-primary btn-sm">Draft</button>
                               </td>
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
@@ -1124,7 +1124,7 @@
                             </tr>
                             <tr>
                               <td>
-                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                <button class="btn btn-primary btn-sm">Draft</button>
                               </td>
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
@@ -1138,7 +1138,7 @@
                             </tr>
                             <tr>
                               <td>
-                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                                <button class="btn btn-primary btn-sm">Draft</button>
                               </td>
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
@@ -1162,7 +1162,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 nl-team-600">
+            <div class="col-md-12 col-lg-5 col-xl-5">
               <div class="nl-team-info">
                 <div class="nl-team-name">your team</div>
                 <div class="nl-team-data">
@@ -1189,7 +1189,7 @@
                 <button type="button" class="btn btn-team btn-big-radius list-view-btn">list view</button>
               </div>
               <div class="nl-team-field">
-                <div class="player-main-block">
+                <div class="player-main-block soccer">
                   <div data-position="G" class="nl-player-block nl-G-position"><img src="assets/img/img-goalkeeper.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
