--- a/markup/_dist/create_team_football.html
+++ b/markup/_dist/create_team_football.html
@@ -66,10 +66,10 @@
                     <li class="nav-item"><a href="players.html" class="nav-link">PLAYERS</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">LIVE SCORES</a></li>
                     <li class="nav-item dropdown"><a href="#" id="dropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle">MY ACCOUNT</a>
-                      <div aria-labelledby="dropdownMenuLink2" class="dropdown-menu"><a href="edit_profile.html" class="dropdown-item">Profile</a><a href="change_password.html" class="dropdown-item">Change Password</a><a href="#" class="dropdown-item">Friends </a><a href="my_balances.html" class="dropdown-item">My Balance</a></div>
+                      <div aria-labelledby="dropdownMenuLink2" class="dropdown-menu"><a href="edit_profile.html" class="dropdown-item">Profile</a><a href="change_password.html" class="dropdown-item">edit Password</a><a href="#" class="dropdown-item">Friends </a><a href="my_balances.html" class="dropdown-item">My Balance</a></div>
                     </li>
                     <li class="nav-item dropdown"><a href="#" id="dropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle"><img alt="" src="assets/img/flag/USA.png"></a>
-                      <div aria-labelledby="dropdownMenuLink2" class="dropdown-menu"><a href="#" class="dropdown-item">France</a><a href="#" class="dropdown-item"><img alt="" src="assets/img/flag/Spain.png"></a><a href="#" class="dropdown-item"><img alt="" src="assets/img/flag/Germany.png"></a><a href="#" class="dropdown-item"><img alt="" src="assets/img/flag/USA.png"></a></div>
+                      <div aria-labelledby="dropdownMenuLink2" class="dropdown-menu"><a href="#" class="dropdown-item">French</a><a href="#" class="dropdown-item"><img alt="" src="assets/img/flag/Spain.png"></a><a href="#" class="dropdown-item"><img alt="" src="assets/img/flag/Germany.png"></a><a href="#" class="dropdown-item"><img alt="" src="assets/img/flag/USA.png"></a></div>
                     </li>
                   </ul>
                   <div class="nl-profile-mobile">
@@ -727,7 +727,7 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>RRB</td>
+                              <td>RB</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -741,7 +741,7 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>LWR</td>
+                              <td>WR</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -783,7 +783,7 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>LRB</td>
+                              <td>RB</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -811,7 +811,7 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>LWR</td>
+                              <td>WR</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -902,14 +902,14 @@
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="RB" class="nl-player-block nl-LRB-position"><img src="assets/img/football/LRB.png" alt="LRB">
+                  <div data-position="LRB" class="nl-player-block nl-LRB-position"><img src="assets/img/football/LRB.png" alt="LRB">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="RB" class="nl-player-block nl-RRB-position"><img src="assets/img/football/RRB.png" alt="RRB">
+                  <div data-position="RRB" class="nl-player-block nl-RRB-position"><img src="assets/img/football/RRB.png" alt="RRB">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
@@ -923,14 +923,14 @@
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="WR" class="nl-player-block nl-LWR-position"><img src="assets/img/football/LWR.png" alt="LWR">
+                  <div data-position="LWR" class="nl-player-block nl-LWR-position"><img src="assets/img/football/LWR.png" alt="LWR">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="WR" class="nl-player-block nl-RWR-position"><img src="assets/img/football/RWR.png" alt="RWR">
+                  <div data-position="RWR" class="nl-player-block nl-RWR-position"><img src="assets/img/football/RWR.png" alt="RWR">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
