--- a/markup/_dist/my_teams.html
+++ b/markup/_dist/my_teams.html
@@ -91,7 +91,7 @@
     </header>
     <main>
       <section class="nl-section nl-my-teams">
-        <div class="container container-wider">
+        <div class="container-fluid">
           <div class="row">
             <div class="col-md-12">
               <h1>My teams</h1>
@@ -100,11 +100,11 @@
           <div class="row">
             <div class="col-6 col-sm-6 col-md-6 col-lg-8"><a href="create_team_football.html"> 
                 <div class="btn btn-primary btn-lg btn-create-team">Create team</div></a></div>
-            <div class="col-6 col-sm-6 col-md-6 col-lg-4 nl-tar"><a href="#"> 
+            <div class="col-6 col-sm-6 col-md-6 col-lg-4 helmet"><a href="#"> 
                 <div class="btn btn-primary btn-lg btn-create-team">Create Helmet</div></a></div>
           </div>
           <div class="row nl-m-b-25">
-            <div class="col-12 col-md-6 col-lg-6 col-xl-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
@@ -213,7 +213,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-6 col-xl-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
@@ -322,7 +322,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-6 col-xl-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
@@ -431,7 +431,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-6 col-xl-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
