--- a/markup/_dist/my_balances.html
+++ b/markup/_dist/my_balances.html
@@ -92,24 +92,26 @@
       <section class="nl-section nl-my-balances">
         <div class="container nl-my-balances-wrapper">
           <div class="row">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-4">
               <div class="quote-wrapper">
-                <p>NLC2 quote BTC :<span class="value">0.000043</span></p>
+                <p>NLC2 - BTC:<span class="value">0.000043</span></p>
               </div>
             </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6">
+            <div class="col-lg-4"></div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-4">
               <div class="quote-wrapper">
-                <p>NLC2 quote USD :<span class="value">0.16089</span></p>
+                <p>NLC2 - USD :<span class="value">0.16089</span></p>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
-              <h2>MY BALANCES</h2>
+              <h2>MY BALANCE</h2>
             </div>
           </div>
           <div class="row">
-            <div class="col-12">
+            <div class="col-lg-2"></div>
+            <div class="col-12 col-sm-10 col-md-10 col-lg-8">
               <table class="table balance-table">
                 <thead>
                   <tr>
@@ -132,14 +134,22 @@
                 </tbody>
               </table>
             </div>
+            <div class="col-lg-2">               </div>
           </div>
-          <div class="row">
+          <div class="row nl-balances-btn-wrapper">
+            <div class="col-12"> 
+              <button class="btn btn-primary">DEPOSIT</button>
+              <button class="btn btn-primary">purchase</button>
+            </div>
+          </div>
+          <div class="row balance-status">
             <div class="col-12">
-              <h2>BALANCE PER CURRENCY</h2>
+              <h2>BALANCE STATUS</h2>
             </div>
           </div>
           <div class="row">
-            <div class="col-12">
+            <div class="col-lg-2"></div>
+            <div class="col-12 col-sm-10 col-md-10 col-lg-8">
               <table class="table balance-table">
                 <thead>
                   <tr>
@@ -162,15 +172,12 @@
                 </tbody>
               </table>
             </div>
+            <div class="col-lg-2">   </div>
           </div>
-          <div class="row">
+          <div class="row nl-balances-btn-wrapper">
             <div class="col-12">
-              <div class="nl-balances-btn-wrapper">
-                <button class="btn btn-primary dark">VIEW STATEMENT</button>
-                <button class="btn btn-primary">DEPOSITE</button>
-                <button class="btn btn-primary dark">WITHDRAW</button>
-                <button class="btn btn-primary">PURCHASE</button>
-              </div>
+              <button class="btn btn-primary">STATEMENT</button>
+              <button class="btn btn-primary">WITHDRAW</button>
             </div>
           </div>
         </div>
@@ -180,24 +187,16 @@
     <!--include _partials/registration-modal.jade-->
     <!--Footer Block-->
     <footer class="nl-footer">
-      <div class="nl-footer--top">
-        <div class="row align-items-center">
-          <div class="col-lg-1"><a href="index.html"><img src="assets/img/nl-footer-logo.jpg" alt="NO Limit"></a></div>
-          <div class="col-lg-8">
-            <p>Residents of the states of Alabama, Arizona, Colorado, Delaware, Florida, Georgia, Hawaii, Idaho, Illinois, Indiana, Iowa, Louisiana, Massachusetts, Michigan, Mississippi, Missouri, Montana, Nevada, New York, North Dakota, Pennsylvania, Tennessee, Texas, Vermont, Virginia and Washington, as well as Puerto Rico and countries where otherwise prohibited by law are not eligible to enter Fantasy Sports Pay to play contests. Free - roll contests are open to all the public over 18 as it does not fall into the pay-to-play category as advertisers provide the prizes.</p>
-          </div>
-          <div class="col-lg-3 nl-tar">
-            <div class="input-group-btn"><a htef="#" class="btn btn-footer">Forum</a><a htef="#" class="btn btn-footer">Contact Us</a></div>
-            <div class="input-group-btn"><a htef="#" class="btn btn-footer">Faq</a><a htef="#" class="btn btn-footer">Terms & Conditions</a></div>
-          </div>
-        </div>
-      </div>
       <div class="nl-footer--button">
-        <div class="row align-items-center">
-          <div class="col-lg-9">
-            <p>Copyright © 2017 No Limit Fantasy Sports, LLC All Rights Reserved Contest Rules, Terms and Conditions and Privacy Policy</p>
+        <div class="row">
+          <div class="col-lg-8">
+            <div class="nl-social-icon"><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a><a class="btn btn-charity"><span>Charity<br>Projects</span></a></div>
+            <p><br />Copyright © 2017 No Limit Fantasy Sports, LLC All Rights Reserved Contest Rules, Terms and Conditions and Privacy Policy<br /></p>
           </div>
-          <div class="col-lg-3 nl-social-icon nl-tar"><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></div>
+          <div class="col-lg-4 nl-tar">
+            <div class="input-group-btn"><a href="#" class="btn btn-footer">Helpdesk</a><a href="contact.html" class="btn btn-footer">Contact Us</a></div>
+            <div class="input-group-btn"><a href="faq.html" class="btn btn-footer">Faq</a><a href="terms_conditions.html" class="btn btn-footer">Terms & Conditions</a></div>
+          </div>
         </div>
       </div>
     </footer>
