footer update for mobile center out buttons and faq update

--- a/markup/_dist/faq.html
+++ b/markup/_dist/faq.html
@@ -92,7 +92,7 @@
       <section class="nl-section nl-faq">
         <div class="container">
           <div class="row">
-            <div class="nl-p-b-80 nl-p-t-80">
+            <div class="col-12">
               <h2>FAQ</h2>
               <div id="accordion" role="tablist" aria-multiselectable="true">
                 <div class="card">
