--- a/markup/_dist/my_balances.html
+++ b/markup/_dist/my_balances.html
@@ -92,13 +92,12 @@
       <section class="nl-section nl-my-balances">
         <div class="container nl-my-balances-wrapper">
           <div class="row">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-4">
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4">
               <div class="quote-wrapper">
                 <p>NLC2 - BTC:<span class="value">0.000043</span></p>
               </div>
             </div>
-            <div class="col-lg-4"></div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-4">
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4 offset-lg-4">
               <div class="quote-wrapper">
                 <p>NLC2 - USD :<span class="value">0.16089</span></p>
               </div>
@@ -110,7 +109,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-2"></div>
+            <div class="col-lg-2 col-sm-1 col-md-1"></div>
             <div class="col-12 col-sm-10 col-md-10 col-lg-8">
               <table class="table balance-table">
                 <thead>
@@ -134,7 +133,7 @@
                 </tbody>
               </table>
             </div>
-            <div class="col-lg-2">               </div>
+            <div class="col-lg-2 col-sm-1 col-md-1">               </div>
           </div>
           <div class="row nl-balances-btn-wrapper">
             <div class="col-12"> 
@@ -148,7 +147,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-2"></div>
+            <div class="col-lg-2 col-sm-1 col-md-1"></div>
             <div class="col-12 col-sm-10 col-md-10 col-lg-8">
               <table class="table balance-table">
                 <thead>
@@ -172,7 +171,7 @@
                 </tbody>
               </table>
             </div>
-            <div class="col-lg-2">   </div>
+            <div class="col-lg-2 col-sm-1 col-md-1">   </div>
           </div>
           <div class="row nl-balances-btn-wrapper">
             <div class="col-12">
